# langgraph-book-code

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
chapter10/: config.py  example_basic.py  graph_basic.mmd  graph_with_review.mmd  main.py  research_report.txt  test_all.py  visualize_graph.py  快速开始.md
chapter11/: .gitignore  code_agent_graph.mmd  visualize_graph.py
chapter12/: POI_2.0_升级说明.md  README.md  example_auto.py  main.py  test_human_loop.py  visualize_graph.py  wuhan_travel_agent_graph.mmd  快速开始.md
chapter2/: chapter2_agent_evaluation.py  chapter2_cognitive_architecture.py  chapter2_human_in_loop.py  chapter2_reasoning_loop.py  chapter2_tool_use.py
chapter3/: chapter3_plan_execute_agent.py  chapter3_react_agent.py  chapter3_reflexion_agent.py
chapter4_fastmcp/: README.md  pyproject.toml
chapter5_hellolangraph/: chapter5_advanced_example.py  chapter5_hello_langgraph.py
chapter6/: 01_persistence_basic.py  02_persistence_advanced.py  03_streaming_modes.py  04_streaming_research_assistant.py  05_memory_trim_messages.py  06_memory_remove_and_summary.py  07_memory_complete_chatbot.py  README.md
chapter7/: 7_1_approval_workflow.py  7_1_compile_time_interrupt.py  7_1_human_in_loop_basic.py  7_2_time_travel_basic.py  7_2_time_travel_debugging.py  7_3_subgraphs_advanced.py  7_3_subgraphs_basic.py  7_4_functional_api_advanced.py  7_4_functional_api_basic.py
chapter8/: 8_1_langsmith_tracing_basic.py  8_2_studio_visualization.py  8_3_advanced_tracing.py  README.md  langgraph.json
chapter9/: 01_single_agent_limitation.py  README.md  config.py  (+7 more)
(+28 files in other folders)
